[package]
name = "gign"
description = "Gitignore generator"
version = "0.1.0"
edition = "2021"
keywords = ["git", "ignore", "generator", "cli"]
readme = "README.md"
license = "MIT"
authors = ["metafates <fates@duck.com>"]
homepage = "https://github.com/metafates/ignore"

[dependencies]
clap = { version = "3.2.8", features = ["cargo"] }
triple_accel = "0.4.0"
walkdir = "2.3.2"
dirs = "1.0.4"
colored = "2"
