[package]
name = "gign"
description = "Command line tool to generate .gitignore files"
version = "0.2.0"
edition = "2021"
keywords = ["git", "ignore", "generator", "cli"]
readme = "README.md"
license = "MIT"
authors = ["metafates <fates@duck.com>"]
homepage = "https://github.com/metafates/gign"

[dependencies]
clap = { version = "3.2.8", features = ["cargo"] }
triple_accel = "0.4.0"
walkdir = "2.3.2"
dirs = "1.0.4"
colored = "2"
